--- a/hsm_portal_medico/hsm_portal_medico.csproj
+++ b/hsm_portal_medico/hsm_portal_medico.csproj
@@ -66,6 +66,7 @@
     <Content Include="paciente.asmx" />
     <Content Include="paciente.html" />
     <Content Include="packages.config" />
+    <Content Include="xcirurgia.htm" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
