--- a/hsm_portal_medico/Web.config
+++ b/hsm_portal_medico/Web.config
@@ -8,6 +8,12 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
 -->
 <configuration>
   <system.web>
+    <webServices>
+      <protocols>
+        <add name="HttpGet" />
+        <add name="HttpPost" />
+      </protocols>
+    </webServices>
     <authentication mode="Forms">
       <forms name="form1" loginUrl="login.aspx" protection="All" path="/" timeout="600" />
     </authentication>
@@ -16,7 +22,6 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
     </authorization>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
-        <add assembly="System.Xml.Serialization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" />
