--- a/hsm_portal_medico/Web.config
+++ b/hsm_portal_medico/Web.config
@@ -13,6 +13,9 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
         <add name="HttpGet" />
         <add name="HttpPost" />
       </protocols>
+      <staticContent>
+        <clientCache cacheControlMode="DisableCache" />
+      </staticContent>
     </webServices>
     <authentication mode="Forms">
       <forms name="form1" loginUrl="login.aspx" protection="All" path="/" timeout="600" />
