--- a/hsm_portal_medico/hsm_portal_medico.csproj
+++ b/hsm_portal_medico/hsm_portal_medico.csproj
@@ -75,6 +75,7 @@
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
